add main controller

--- a/test.html
+++ b/test.html
@@ -21,6 +21,8 @@
         <script src="public/app/cv/view/page/pageM.js"></script>
         <script src="public/app/cv/view/page/pageN.js"></script>
         <script src="public/app/cv/controller/page.js"></script>
+        <script src="public/app/cv/controller/phone/main.js"></script>
+        <script src="public/app/cv/controller/tablet/main.js"></script>
     </head>
     <body>
     </body>
