--- a/test.html
+++ b/test.html
@@ -25,5 +25,6 @@
         <script src="public/app/cv/controller/tablet/main.js"></script>
     </head>
     <body>
+     <p>It's a test page</p>
     </body>
 </html>
