--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
         <title>Mobile POC</title>
         <link rel='stylesheet' media='all' href=''/>
         <meta name='viewport' content='width=device-width, initial-scale=1'/>
-        <link href="public/app/libs/sencha-touch-2-b1/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
-        <link href="public/app/libs/sencha-touch-2-b1/resources/css/android.css" rel="stylesheet" type="text/css" />
-        <link href="public/app/libs/sencha-touch-2-b1/resources/css/apple.css" rel="stylesheet" type="text/css" />
+        <link href="public/app/libs/sencha-touch-2-b1/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" title="senchatouch" id="senchatouch"/>
+        <link href="public/app/libs/sencha-touch-2-b1/resources/css/android.css" rel="stylesheet" type="text/css" title="android" id="android" disabled="true"/>
+        <link href="public/app/libs/sencha-touch-2-b1/resources/css/apple.css" rel="stylesheet" type="text/css" title="apple" id="apple" disabled="true"/>
         <script src="public/app/libs/sencha-touch-2-b1/sencha-touch-all-debug.js"></script>
 
         <script src="public/app/cv/app.js"></script>
