--- a/index.html
+++ b/index.html
@@ -5,28 +5,20 @@
         <title>Mobile POC</title>
         <link rel='stylesheet' media='all' href=''/>
         <meta name='viewport' content='width=device-width, initial-scale=1'/>
-        <link href="public/app/libs/sencha-touch-2-b1/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
-        <link href="public/app/libs/sencha-touch-2-b1/resources/css/android.css" rel="stylesheet" type="text/css" />
-        <link href="public/app/libs/sencha-touch-2-b1/resources/css/apple.css" rel="stylesheet" type="text/css" />
-        <script src="public/app/libs/sencha-touch-2-b1/sencha-touch-all-debug.js"></script>
+        <link href="public/app/libs/sencha-touch-2-b3/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
+        <link href="public/app/libs/sencha-touch-2-b3/resources/css/android.css" rel="stylesheet" type="text/css" />
+        <link href="public/app/libs/sencha-touch-2-b3/resources/css/apple.css" rel="stylesheet" type="text/css" />
+        <script src="public/app/libs/sencha-touch-2-b3/sencha-touch-all.js"></script>
 
-<<<<<<< HEAD
-        <script src="public/app/cv/app.js"></script>
-        <script src="public/app/cv/profile/phone.js"></script>
-        <script src="public/app/cv/profile/tablet.js"></script>
-        <script src="public/app/cv/view/phone/main.js"></script>
-        <script src="public/app/cv/view/tablet/main.js"></script>
-        <script src="public/app/cv/view/navigation.js"></script>
-    </head>
-    <body>
-=======
         <script src="cv/app.js"></script>
         <script src="cv/profile/phone.js"></script>
         <script src="cv/profile/tablet.js"></script>
+        <script src="cv/model/main.js"></script>
         <script src="cv/controller/phone/main.js"></script>
         <script src="cv/controller/phone/page.js"></script>
         <script src="cv/controller/tablet/main.js"></script>
         <script src="cv/controller/tablet/page.js"></script>
+        <script src="cv/view/portal.js"></script>
         <script src="cv/view/phone/main.js"></script>
         <script src="cv/view/phone/navigation.js"></script>
         <script src="cv/view/phone/page.js"></script>
@@ -38,6 +30,5 @@
     </head>
     <body>
      <p>It's a test page</p>
->>>>>>> gh-pages
     </body>
 </html>
